--- a/friend-service.properties
+++ b/friend-service.properties
@@ -8,4 +8,4 @@ spring.rabbitmq.password=guest
 #spring.rabbitmq.listener.simple.retry.initial-interval=5000
 #
 #spring.rabbitmq.dynamic=true
-spring.application.name=friend-service
+spring.application.name=friendservice
