--- a/post-service.properties
+++ b/post-service.properties
@@ -2,4 +2,4 @@ server.port=8989
 spring.data.mongodb.database=facebook
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-spring.application.name=postservice
+spring.application.name=post-service
